--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,11 @@ h3 {
     font-size: 28px;
 }
 
+.non-main-list {
+    display: inline-block;
+    text-align: left;
+}
+
 ul {
     text-align: center;
     list-style-position: inside;
